frontend/src/App.css
@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);

#root {
  background-color: black;
  display: flex;
  min-height: 100vh;
}

button {
  text-transform: uppercase;
  font-weight: 800;
  border-radius: 0;
}

.justify-center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.align-center {
  align-self: center;
}

.triangle {
  width: 0;
  height: 0;
  border-color: black;
  border-left: 1rem solid transparent;
  border-right: 1rem solid transparent;
}

.triangle.up {
  border-bottom: 1rem solid;
}

.triangle.down {
  border-top: 1rem solid;
}

.App {
  text-align: left;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: "Press Start 2P", "Courier New", Courier, monospace;
  font-weight: bold;
  font-size: 12px;
  position: relative;
  z-index: 0;
  width: 100%;
}

.introScreen-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  margin: auto;
  height: 50vh;
  color: white;
}

.title {
  font-size: 3em;
}

.subtitle {
  font-size: 1.5em;
}

#chat{
  z-index: 100;
  position: fixed;
  bottom: 0;
  right: 5em;
  width: 25em;
  background-color: #012716;
  border-radius: 2px;
  color: #44bc86;
}

#chat .chat-header{
  color: #cccccc;
  height: 2.5em;
  padding: 0.5em 1em;
  width: 100%;
  background-color: #6e6e6e;
  display: inline-flex;
  justify-content: space-between;
}

#chat .collapsible{
  border: 2px solid #61746b;
  border-bottom: none;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 30em;
  padding: 1em 0.5em 0.5em 0.5em;
}

#chat .collapsible.collapsed{
  height: 0;
  padding: 0;
}

#chat .collapsible.waiting:after{
  content: 'Waiting for other player to connect...';
  padding: 2em 1em;
  text-align: center;
  z-index: 42;
  position: absolute;
  top: 2.5em;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(55,55,55,0.8);
  justify-content: center;
  align-items: center;
  display: flex;
}

#chat .bubble{
  font-size: 1.1em;
  color: green;
}

#chat .bubble.disconnected{
  color: red;
}

@keyframes notification-flash {
  0%   { color: green; }
  50%  { color: orange; }
  100% { color: green; }
}

#chat .bubble.notification{
  animation: notification-flash 1s step-end infinite;
}

#chat .chat-intro{
  text-align: center;
  font-size: 0.8em;
}

#chat .chat-content{
  flex-grow:1;
  padding: 1em 1em;
  overflow: auto;
  display: flex;
  flex-direction: column-reverse;
}

#chat .chat-footer{
  display: inline-flex;
  justify-content: space-between;
}

#chat .input-container{
  flex: 1;
  display: flex;
  overflow: hidden;
}

#chat input{
  background-color: transparent;
  border: none;
  color:#44bc86;
  cursor: none;
  caret-color: transparent;
}

#chat input:focus-visible{
  outline: none;
}

.caret{
  background-color: #44bc86;
  width: 1ch;
  position: relative;
  left: -1ch;
}
.caret.focused{
  -webkit-animation: blink 1s step-end infinite;
  animation: blink 1.5s step-end infinite;
}

@-webkit-keyframes blink {
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}

@keyframes blink {
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}

#chat button{
  color: #44bc86;
  background-color: transparent;
  border: none;
}

.settings-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin: 1rem 2rem;
  padding: 2rem;
  color: white;
}

#settings input {
  width: 4em;
  min-width: 4em;
  text-align: center;
}

#settings input[type="number"]::-webkit-inner-spin-button,
#settings input[type="number"]::-webkit-outer-spin-button {
  opacity: 1;
}

#settings .button-container {
  text-align: center;
}

#settings .button {
  margin-bottom: 1rem;
}

#settings .button.disabled {
  background-color: hsl(0deg 0% 73%);
  color: rgba(16, 16, 16, 0.3);
  margin-top: 1rem;
  height: 2.5rem;
  margin-right: 1rem;
}

#settings .hint {
  font-size: 0.9em;
}

.unitSelection-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  margin: 1rem 2rem;
  padding: 2rem;
}

.taskForceSelector-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 7vh 0 3vh 0;
}

.taskForceSelector-unit {
  width: 5vw;
  margin: 0 2.5vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100%;
}

.error {
  color: red;
  font-size: 1.2em;
  margin: 1rem 0;
  min-height: 1.5em;
}

.unit-box {
  background-color: white;
  width: 150%;
  padding: 0.5rem 0;
}

.unit-box > .unit > .unit-info {
  width: 160%;
}

.unitPlacement {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin: 1rem 0rem;
  padding: 2rem;
  width: 50%;
  position: absolute;
  z-index: 100;
  pointer-events: none;
}

.unitPlacement > .title {
  position: relative;
  background-color: white;
  padding: 0.5rem 2rem;
  font-size: 1em;
}

.unitPlacement.right {
  transform: translate(30%, 0);
}

.unitPlacement.left {
  transform: translate(-30%, 0);
}

.unitPlacement-container {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  margin-top: 2rem;
  margin-bottom: 3rem;
}

.unitPlacement.left > .unitPlacement-container {
  flex-direction: row-reverse;
  justify-content: end;
}

.unitPlacement-box {
  position: relative;
  width: 16%;
  margin: 2% 2%;
  padding: 0 1.4%;
  background-color: white;
}

.unitPlacement-box > .unit {
  opacity: 0.5;
}

.unitPlacement-box > .unit > .unit-sprite {
  width: 120%;
}

.unitPlacement-box.selected {
  opacity: 1;
  box-shadow: 0px 0px 0px 0.7rem green;
}
/* ... */

